--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CSE-306 Full Lab Quiz Game</title>
+  <title>CSE-306 Lab Quiz Game</title>
   <style>
     body {
       font-family: Arial, sans-serif;
